<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainProfile.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewProfile"
                android:src="@drawable/sloth_signin"
                android:contentDescription="Profile Image"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameTitle"
                android:text="@string/name"
                android:textIsSelectable="false"
                android:textSize="12dp"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:layout_gravity="left|top" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textIsSelectable="false"
                android:textSize="24dp"
                android:maxLines="1"
                android:layout_gravity="left|top"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameTitle"
                android:textIsSelectable="false"
                android:typeface="monospace"
                android:textSize="12dp"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:layout_gravity="left|top"
                android:text="@string/usr" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textIsSelectable="false"
                android:textSize="26dp"
                android:maxLines="1"
                android:layout_gravity="left|top"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressTitle"
                android:textIsSelectable="false"
                android:textSize="12dp"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:layout_gravity="left|top"
                android:text="@string/address" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:textIsSelectable="false"
                android:textSize="20dp"
                android:layout_gravity="left|top"
                android:textColor="#000000"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textIsSelectable="false"
                    android:textSize="12dp"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:layout_gravity="left|top"
                    android:text="@string/bstS4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/score4"
                    android:layout_weight="7"
                    android:textIsSelectable="false"
                    android:textSize="20dp"
                    android:maxLines="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="left|top"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textIsSelectable="false"
                    android:textSize="12dp"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:layout_gravity="left|top"
                    android:text="@string/bstS6" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/score6"
                    android:layout_weight="7"
                    android:textIsSelectable="false"
                    android:textSize="20dp"
                    android:maxLines="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="left|top"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textIsSelectable="false"
                    android:textSize="12dp"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:layout_margin="5dp"
                    android:layout_gravity="left|top"
                    android:text="@string/bstS8" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/score8"
                    android:layout_weight="7"
                    android:textIsSelectable="false"
                    android:textSize="20dp"
                    android:maxLines="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="left|top"
                    android:text="0" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/edit_profile"
                android:text="@string/edit_profile"
                android:backgroundTint="@android:color/tertiary_text_dark"
                android:textColor="@android:color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/log_out"
                android:text="@string/lgo"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"/>



        </LinearLayout>

    </ScrollView>


</LinearLayout>
